Modified purpose and scope and some details

--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
             <div class="col-8">
               <h4 class="mb-3 text-primary">Sensing</h4>
               <ul class="">
-                <li>Collecting the daily rest heartbeat rate of user by smart band.</li>
-                <li>Using heartbeat sensor to detect the real-time heartbeat while doing sport.</li>
+                <li class="text-justify">Collecting the daily rest heartbeat rate of user by smart band.</li>
+                <li class="text-justify">Using heartbeat sensor to detect the real-time heartbeat while doing sport.</li>
               </ul>
             </div>
           </div>
@@ -124,8 +124,8 @@
             <div class="col-8">
               <h4 class="mb-3 text-primary">Reasoning</h4>
               <ul class="">
-                <li>Listening to music while doing sports improves the result of fitness.&nbsp;According to the heartbeat of user, &nbsp;F.P provide more suitable music during the exercising.</li>
-                <li>The color of lights changes with the heartbeat of user in order to help user know the state of exercise clearly, which create a good atmosphere during fitness.</li>
+                <li class="text-justify">Listening to music while doing sports improves the result of fitness.&nbsp;According to the heartbeat of user, &nbsp;F.P provide more suitable music during the exercising.</li>
+                <li class="text-justify">The color of lights changes with the heartbeat of user in order to help user know the state of exercise clearly, which create a good atmosphere during fitness.</li>
               </ul>
             </div>
           </div>
@@ -140,9 +140,9 @@
             <div class="col-8">
               <h4 class="mb-3 text-primary">Interacting&nbsp;</h4>
               <ul class="">
-                <li>Provides the users a mobile application to manage the fitness.</li>
-                <li>&nbsp;Customize the enviroment variables for fitness, including the playing list and the light color for different heartbeat range.&nbsp;</li>
-                <li>Show real-time heartbeat rate of user on the smart phone.&nbsp;</li>
+                <li class="text-justify">Provides the users a mobile application to manage the fitness.</li>
+                <li class="text-justify">Customize the enviroment variables for fitness, including the playing list and the light color for different heartbeat range.&nbsp;</li>
+                <li class="text-justify">Show real-time heartbeat rate of user on the smart phone.&nbsp;</li>
               </ul>
             </div>
           </div>
@@ -155,9 +155,9 @@
             <div class="col-8">
               <h4 class="mb-3 text-primary">Acting</h4>
               <ul class="">
-                <li>Change or pause the music as user wish during the current section of excersicing &nbsp;by using the android applicaion.</li>
-                <li>&nbsp;Remind user time up of warm up excercise by turning on LEDs.</li>
-                <li>Auto-change suitable music and colors of LED according to the real-time heartbeat rate of the user in different range.</li>
+                <li class="text-justify">Change or pause the music as user wish during the current section of excersicing &nbsp;by using the android applicaion.</li>
+                <li class="text-justify">&nbsp;Remind user time up of warm up excercise by turning on LEDs.</li>
+                <li class="text-justify">Auto-change suitable music and colors of LED according to the real-time heartbeat rate of the user in different range.</li>
               </ul>
             </div>
           </div>
@@ -183,7 +183,7 @@
                   </h4>
                 </div>
               </div>
-              <h5>The system can sense the daily resr heart beat rate of user before fitness and real-time heartbeat rate during the fitness.</h5>
+              <h5 class="text-justify">The system can sense the daily resr heart beat rate of user before fitness and real-time heartbeat rate during the fitness.</h5>
             </div>
             <div class="col-md-6 my-3">
               <div class="row mb-3">
@@ -196,7 +196,7 @@
                   </h4>
                 </div>
               </div>
-              <h5 class="">The system will change the music and lights' color by detecting users' heartbeat rate in real time.</h5>
+              <h5 class="text-justify">The system will change the music and lights' color by detecting users' heartbeat rate in real time.</h5>
             </div>
           </div>
           <div class="row text-left py-2">
@@ -211,7 +211,7 @@
                   </h4>
                 </div>
               </div>
-              <h5>It can an be easily installed in any private gym.</h5>
+              <h5 class="text-justify">It can an be easily installed in any private gym.</h5>
             </div>
             <div class="col-md-6 my-3">
               <div class="row mb-3">
@@ -224,7 +224,7 @@
                   </h4>
                 </div>
               </div>
-              <h5>People who prefer to do fitness in a private space and improve the feeling during the fitness. It only works for one user privately at the same time.</h5>
+              <h5 class="text-justify">People who prefer to do fitness in a private space and improve the feeling during the fitness. It only works for one user privately at the same time.</h5>
             </div>
           </div>
         </div>
@@ -278,8 +278,7 @@
                 <b>Speaker:</b>
               </i> Playing suitable music. It will change into suitable rhythm by different level (high or low) of users’ heartbeat rate.
               <br>
-              <br>
-            </li>
+              <br> </li>
             <li class="text-left">
               <b class="text-uppercase">User Interface Device:</b>
               <br>
@@ -320,9 +319,8 @@
                 <b>Task manger:</b>
               </i> To perform corresponding action by receiving the command from Android Application.
               <br>
-              <br>
-            </li>
-            <li class="text-left">
+              <br> </li>
+            <li class="text-justify">
               <b>Android App:</b>
               <br>
               <br>
@@ -331,9 +329,8 @@
               </i> It allows user to initialize necessary data for the sever or reset it. Showing the playing music names and real-time heart beat rate. User can also turn on/off the lights, change the lights color for different sporting range and Pause/Resume
               Playing/Change the playing music.
               <br>
-              <br>
-            </li>
-            <li class="text-left">
+              <br> </li>
+            <li class="text-justify">
               <b>Raspberry Pi Software:</b>
               <br>
               <br>It analyzes and converting the voltage signal into heartbeat rate represented by digitals, connect to the Python server by LAN. </li>
@@ -351,14 +348,18 @@
           <div class="row">
             <div class="col-md-12 my-4">
               <h1 contenteditable="true" class="my-5">Purpose and scope </h1>
-              <p class="text-justify p-1">The Purpose of our system is that improve the result of fitness(speed of metabolism, burning of fat faster&nbsp;) by creating a good atmosphere for the indoor fitness with music and light.
+              <p class="text-justify p-1">The Purpose of our system is to improve the result of indoor fitness ( improving speed of metabolism, burning of fat faster&nbsp;) by creating a good atmosphere using suitable music and light.
+                <br>
                 <br>First of all, the system collects the user's rest heartbeat rate of the last one week from cloud server to get a more accurate heartbeat range data.
-                <br>When user starts to warm-up, the system receives the command to play the random suitable music in warm-up heartbeat rate. At the same time, the system begins counting down with the warm-up time user set before.
-                <br>It started the official fitness state when the warm-up time is over. According to the heartbeat rate during the fitness,the system compare the data with the initial data to match up the music from users’ data base and light suit for the
-                change of rate.
-                <br>The colors changing of LED has 3 sections as music playing(anaerobic exercise,aerobic exercise,maximum heartbeat rate state).The colors changing of LED with the purpose of making users know about their sate of exercise directly.It will
-                be a good atmosphere during the fitness. It also can define the colors of light and music as user like any time.
-                <br>The system can be control to stop or not any time.At the end of fitness,the music stop playing and the light turn off. </p>
+                <br>
+                <br>When user begins to do warm-up sport, the system begins to play the random music in warm-up heartbeat rate range. At the same time, the system begins counting down through the time set by the user. It will inform user by turning on the
+                LEDs when the warm-up time is over.
+                <br>
+                <br>After starting the formal fitness, once a song is ending, the system will choose the most suitable next music by analyzing the heartbeat data in the pervious period. The color of LEDs has 3 ranges which stands for 3 kinds of excerising
+                (anaerobic exercise, aerobic exercise, reaching maximum heartbeat rate state). The lights' color will change automatically with the purpose of making users know about their sate of exercise directly. This will create a good atmosphere
+                during fitness. LED color and music playing state can also be modified by user at any time.&nbsp;
+                <br>
+                <br>Finally system can be turned off at the end of fitness and all associated device will automatically turn off.</p>
               <h1 class="my-5">Project features </h1>
               <table class="table" style="color:white;">
                 <thead>
@@ -484,12 +485,12 @@
               <s>The strategies for computers to act when the user's heartbeat ratio changes. </s>
             </li>
             <li class="text-left my-2">
-              <s>Need to learn the API to communicate with the LEDS and. </s>
+              <s>Need to learn the API to communicate with the LEDS. </s>
             </li>
             <li class="text-left my-2">
               <s>Develop the application for smartphone to interaction. </s>
             </li>
-            <li class="text-left my-2">Heartbeat sensor is not very stable.</li>
+            <li class="text-left my-2">Heartbeat sensor is not very stable. ( May caused by bad contact. )</li>
           </ul>
         </div>
       </div>
