--- a/index.html
+++ b/index.html
@@ -402,20 +402,20 @@
           </div>
           <h1 class="my-3">Hardware Components</h1>
           <ol class="p-4">
-            <li class="my-1 text-left">Computer (OTS)</li>
-            <li class="my-1 text-left">Andriod smartphone (OTS)</li>
-            <li class="my-1 text-left">Philips Hue</li>
-            <li class="my-1 text-left">Fitbit Charge</li>
+            <li class="my-1 text-left">Computer: MACHENIKE F117 (OTS)</li>
+            <li class="my-1 text-left">Andriod smartphone: XIAOMI MIX 2 (OTS)</li>
+            <li class="my-1 text-left">LED: Philips Hue</li>
+            <li class="my-1 text-left">Smart band: Fitbit Charge HR</li>
             <li class="my-1 text-left">Raspberry Pi 3</li>
             <li class="my-1 text-left">Heartbeat sensor</li>
             <li class="my-1 text-left">Speaker: laptop built-in speaker&nbsp;(OTS)</li>
           </ol>
           <h1 class="my-3">Software Components</h1>
           <ol class="py-4">
-            <li class="my-1 text-left">Python version 3.6</li>
-            <li class="my-1 text-left">MariaDB 10.3</li>
-            <li class="my-1 text-left">Android OS API level 27</li>
-            <li class="my-1 text-left">Raspbian Stretch 4.1</li>
+            <li class="my-1 text-left">Python: v3.6</li>
+            <li class="my-1 text-left">MariaDB: v10.3</li>
+            <li class="my-1 text-left">Android OS: API level 27</li>
+            <li class="my-1 text-left">Raspbian Stretch: v4.1</li>
           </ol>
         </div>
       </div>
