Modify some details

--- a/index.html
+++ b/index.html
@@ -483,7 +483,9 @@
         </div>
         <div class="col-6 col-lg-4 my-3">
           <img src="assets/images/Member-2.jpg" class="center-block img-fluid rounded-circle my-2" width="300">
-          <h3 class="mb-0 py-2">FENG SHENGJIE</h3>
+          <h3 class="mb-0 py-2">
+			  <b>FENG SHENGJIE</b>
+		  </h3>
           <p>294778144@qq.com</p>
           <div class="row">
             <div class="col-md-12">
@@ -496,7 +498,9 @@
         </div>
         <div class="col-6 col-lg-4 my-3 animate-in-right">
           <img src="assets/images/Member-3.jpg" class="center-block img-fluid rounded-circle my-2" width="300">
-          <h3 class="mb-0 py-2">JIA ZIRUI</h3>
+          <h3 class="mb-0 py-2">
+			  <b>JIA ZIRUI</b>
+		  </h3>
           <p> jzruirui@gmail.com</p>
           <div class="row">
             <div class="col-md-12">
