--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                   </h4>
                 </div>
               </div>
-              <h5 class="text-justify">The system can sense the daily resr heart beat rate of user before fitness and real-time heartbeat rate during the fitness.</h5>
+              <h5 class="text-justify">The system can sense the daily rest heart beat rate of user before fitness and real-time heartbeat rate during the fitness.</h5>
             </div>
             <div class="col-md-6 my-3">
               <div class="row mb-3">
